--- a/index.html
+++ b/index.html
@@ -1,17 +1,13 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <link rel="stylesheet" href="style.css">
-    <title>LUIZ RAFAEL</title>
+    <title>Document</title>
 </head>
 <body>
- <h1>
-Aluno Luiz Rafael
-</h1>
-<p>
-  Ésta pagina de notícias de vôlei de praia atualizadas.
-</p>  
+    <div class="cabecalho">
+ <h1> Jogadores De Vôlei de Praia </h1>
+    </div>
 </body>
 </html>
