--- a/index.html
+++ b/index.html
@@ -35,9 +35,7 @@
     <section id="jogadores">
         <h2>Jogadores Famosos</h2>
         <ul>
-            <li>Arthur Lanci
-                
-            </li>
+            <li>Arthur Lanci </li>
             <li>Evandro</li>
             <li>Emmanuel Rego</li>
             <li>Ricardo Santos</li>
