--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
         <h2>Regras</h2>
         <p>Cada set é vencido pela equipe que fizer 21 pontos primeiro, com exceção do caso de empate.
          Um jogo de vôlei de praia empatado em 20 x 20 não termina quando um dos times fizer
-        o 21º ponto, mas quando um dos times abrir 22 x 20 e, portanto, tiver pelo menos dois pontos de vantagem.</p>
+        o 21º ponto, mas quando um dos times abrir 22 x 20 e, portanto, tiver pelo menos dois pontos de vantagem diferente do vôlei de quadra ele existe 2 toques
+         em que a bola não pode rodar quando da toque.</p>
     </section>
     
     <section id="jogadores">
