--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+ <img id="volei" src="volei.jpeg">
     <header>
         <h1>Vôlei de Praia</h1>
         <nav>
