--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
- <img id="volei" src="volei.jpeg">
+<div class="cabecalho">
+    <img id="volei" src="volei.jpeg">
     <header>
         <h1>Vôlei de Praia</h1>
         <nav>
