--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <div class="cabecalho">
-    <img id="volei" src="volei.jpeg">
+    <img class="volei" src="volei.jpeg">
     <header>
         <h1>Vôlei de Praia</h1>
         <nav>
