--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Lorran</title>
+    <title>Luiz Rafael</title>
 </head>
 
 <body>
     <div class="cabecalho">
        <img class="computador" src="computador.jpeg">
-        <h1> Computadores Para o Futuro </h1>
+        <h1> computadores é o futuro </h1>
     </div>
     <h1>
         Aula Pensamento Computacional
