--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="cabecalho">
        <img class="computador" src="computador.jpeg">
-        <h1> computadores é o futuro </h1>
+        <h1> Computadores é o futuro </h1>
     </div>
     <h1>
         Aula Pensamento Computacional
