--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 
 <body>
     <div class="cabecalho">
-       <img class="computador" src="computador.jpeg">
+       <a href="">ACESSE AQUI</a>
+        <img class="computador" src="computador.jpeg">
         <h1> Computadores é o futuro </h1>
     </div>
     <h1>
