--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <div class="cabecalho">
-       <a href="">ACESSE AQUI</a>
+       <a href="https://www.kabum.com.br/computadores">ACESSE AQUI</a>
         <img class="computador" src="computador.jpeg">
         <h1> Computadores é o futuro </h1>
     </div>
