--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 </head>
 
 <body>
+ <div class="video">
+    <iframe width="1280" height="720" src="https://www.youtube.com/embed/YHu-v637_0I" title="Como escolher um computador para jogos? - Dicas de Hardware #01" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+ </div>
     <div class="cabecalho">
        <a href="https://www.kabum.com.br/computadores">ACESSE AQUI</a>
         <img class="computador" src="computador.jpeg">
